--- a/cluster/apps/networking/traefik/addons/theme-park/theme-park.go.tmpl
+++ b/cluster/apps/networking/traefik/addons/theme-park/theme-park.go.tmpl
@@ -8,7 +8,7 @@ http:
         rewritebody:
           rewrites:
             - regex: </head>
-              replacement: <link rel="stylesheet" type="text/css" href="https://theme-park.${CLUSTER_DOMAIN}/css/base/{{ $app }}/{{ $theme }}.css"></head>
+              replacement: <link rel="stylesheet" type="text/css" href="https://theme-park.${SECRET_PUBLIC_DOMAIN}/css/base/{{ $app }}/{{ $theme }}.css"></head>
 
     # Wrap CSS and theme headers in single middleware for ease of use
     {{ $app }}-theme:
@@ -25,7 +25,7 @@ http:
         rewritebody:
           rewrites:
             - regex: </head>
-              replacement: <link rel="stylesheet" type="text/css" href="https://theme-park.${CLUSTER_DOMAIN}/css/base/{{ $app }}/{{ $theme }}.css"><link rel="stylesheet" type="text/css" href="https://theme-park.${CLUSTER_DOMAIN}/css/addons/{{ $app }}/{{ $app }}-4k-logo/{{ $app }}-4k-logo.css"></head>
+              replacement: <link rel="stylesheet" type="text/css" href="https://theme-park.${SECRET_PUBLIC_DOMAIN}/css/base/{{ $app }}/{{ $theme }}.css"><link rel="stylesheet" type="text/css" href="https://theme-park.${SECRET_PUBLIC_DOMAIN}/css/addons/{{ $app }}/{{ $app }}-4k-logo/{{ $app }}-4k-logo.css"></head>
 
     # Wrap CSS and theme headers in single middleware for ease of use
     {{ $app }}-4k-theme:
