--- a/ansible/kubernetes/playbooks/templates/custom-cilium-helmchart.yaml.j2
+++ b/ansible/kubernetes/playbooks/templates/custom-cilium-helmchart.yaml.j2
@@ -14,6 +14,9 @@ spec:
   bootstrap: true
   valuesContent: |-
     autoDirectNodeRoutes: true
+    bandwidthManager:
+      enabled: true
+      # bbr: true # needs kernel 6.1.39
     bpf:
       masquerade: true
     bgp:
@@ -33,7 +36,7 @@ spec:
     ipv4NativeRoutingCIDR: "{{ k3s_server['cluster-cidr'] }}"
     k8sServiceHost: "{{ k3s_registration_address }}"
     k8sServicePort: 6443
-    kubeProxyReplacement: strict
+    kubeProxyReplacement: true
     kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
     l2announcements:
       enabled: true
